tests/models/struct/named/bool/fail/default.stderr
error: Support default condition is only boolean
 --> tests/models/struct/named/bool/fail/default.rs:5:5
  |
5 |     value: bool,
  |     ^^^^^
